border-gradient animation

--- a/border-gradient/index.css
+++ b/border-gradient/index.css
@@ -5,10 +5,45 @@
   height: 50vh;
 }
 .border-gradient {
+  position: relative;
   height: 4rem;
   width: 10rem;
-  background: linear-gradient(white, white) padding-box,
-    linear-gradient(to right, darkblue, darkorchid) border-box;
+  color: #fff;
+  background-color: #000;
   border-radius: 50em;
   border: 4px solid transparent;
+}
+.border-gradient::after {
+  content: "";
+  position: absolute;
+  top: -8px;
+  left: -8px;
+  height: 4.6rem;
+  width: 10.6rem;
+  background: linear-gradient(
+    60deg,
+    #f79533,
+    #f37055,
+    #ef4e7b,
+    #a166ab,
+    #5073b8,
+    #1098ad,
+    #07b39b,
+    #6fba82
+  );
+  border-radius: 50em;
+  z-index: -1;
+  animation: animatedgradient 3s ease alternate infinite;
+  background-size: 300% 300%;
+}
+@keyframes animatedgradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
