prefers reduced motion

--- a/parallex-effect/index.css
+++ b/parallex-effect/index.css
@@ -16,23 +16,14 @@ body {
 .tree1 {
   height: 100vh;
   right: 3rem;
-  transform-origin: top;
-  animation: zoom-in-right linear forwards;
-  animation-timeline: scroll();
 }
 .tree2 {
   height: 100vh;
   left: -5rem;
-  transform-origin: top;
-  animation: zoom-in-left linear forwards;
-  animation-timeline: scroll();
 }
 .mountain {
   height: 100vh;
   width: 100%;
-  transform-origin: top;
-  animation: zoom-in linear forwards;
-  animation-timeline: scroll();
 }
 
 @keyframes zoom-in-right {
@@ -48,5 +39,23 @@ body {
 @keyframes zoom-in {
   to {
     transform: scale(2) translateZ(10rem);
+  }
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .tree1 {
+    transform-origin: top;
+    animation: zoom-in-right linear forwards;
+    animation-timeline: scroll();
+  }
+  .tree2 {
+    transform-origin: top;
+    animation: zoom-in-left linear forwards;
+    animation-timeline: scroll();
+  }
+  .mountain {
+    transform-origin: top;
+    animation: zoom-in linear forwards;
+    animation-timeline: scroll();
   }
 }
