--- a/3d-card-hover/index.css
+++ b/3d-card-hover/index.css
@@ -1,15 +1,15 @@
 .card{
     width: 300px;
     height: 300px;
-    background-color: #fff;
+    background-color: #decdcd;
     border-radius: 10px;
     padding: 16px;
-    margin: 0 auto;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin: 40px auto;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     position: relative;
     transition: all 0.5s;
 }
 .card:hover{
     transform: translate3d(0, -10px, 20px);
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 40px rgba(0, 0, 0, 0.4);
 }
